ENCD-4849-fix-description-misalignment-in-docs

--- a/src/encoded/static/scss/encoded/modules/_characterizations.scss
+++ b/src/encoded/static/scss/encoded/modules/_characterizations.scss
@@ -312,6 +312,8 @@ $detail-switch-width: 30px;
         flex: 1 1 auto;
         margin: 5px;
         line-height: 1.4;
+        overflow: auto;
+        height: 55px;
     }
 
     @at-root #{&}__preview {
